# re-harness

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  generate_tools_md.py  pyproject.toml  reva_tools.md
adapters/dynamic_ce/: adapter.py  client.py  mapper.py
adapters/patch_cpp/: adapter.py  compiler.py  injector.py  log_reader.py  template_engine.py
adapters/static_reva/: adapter.py  client.py  mapper.py
apps/api/: deps.py  main.py
apps/api/routes/: research.py  review.py  sessions.py
apps/worker/: graph_factory.py  runner.py
core/: config.py  logging.py
core/graph/: factory.py  state.py
core/graph/nodes/: collect_evidence.py  draft_experiment.py  (+3 more)
core/models/: claim.py  enums.py  evidence.py  experiment.py  finding.py  observation.py  review.py  session.py  target.py
core/services/: research_service.py  review_service.py  session_service.py
core/skills/: generate_logging_hook.md  generate_return_override_hook.md  promote_to_persistent_patch.md  runtime_to_static_feedback.md  verify_branch_condition.md  verify_field_semantics.md
docs/: api.md  research_loop.md
samples/win_vm_target/: sample_vm_target.cpp
storage/: db.py  models.py  schema.sql
storage/repositories/: claims.py  evidence.py  reviews.py  sessions.py
templates/minhook_dll/: CMakeLists.txt
templates/minhook_dll/src/: dllmain.cpp  hook_entry.cpp  logger.cpp
templates/minhook_dll/src/targets/: branch_guard.cpp.j2  logging_hook.cpp.j2  return_override.cpp.j2
tests/integration/: test1.py
tests/unit/: test_graph.py  test_sessions.py
